--- a/css/style.css
+++ b/css/style.css
@@ -12,8 +12,69 @@
   box-sizing: border-box;
   background-color: #FDFFF8;
 }
+main{
+  width: 480px;
+  min-height: 100vh;
+  margin: 0 auto;
+  border-left: 1px solid var(--light-grey);
+  border-right: 1px solid var(--light-grey);
+  padding-bottom: 20vh;
+}
+
+.main__header{
+  font-size: 18px;
+  font-weight: bold;
+  padding: 16px;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  border-bottom: 1px solid var(--light-grey);
+}
+
+.chat{
+  display: flex;
+  padding: 16px 16px 2px 16px;
+  border-bottom: 1px solid var(--light-grey);
+}
+
+.chat__ava{
+  width: 48px;
+  height: 48px;
+  margin-right: 16px;
+}
+.chat__body__header{
+  margin-top: 1px;
+  display: flex;
+  align-items: center;
+}
+
+.chat__body__header h3{
+  font-size: 16px;
+  font-weight: bold;
+}
+
+.chat__body__header a{
+  font-size: 14px;
+  color: rgb(0,0,0,0.5);
+  text-decoration: none;
+}
+
+.chat__body__header a:hover{
+  text-decoration: underline;
+}
+
+.chat__body p{
+  font-size: 16px;
+  line-height: 24px;
+  padding: 2px 48px 18px 0;
+}
+.chat__body__header__data {
 
 
+}
+.chat__body__header__username{
+  padding-left: 16px;
+}
 /*
 Навигация
 */
