--- a/css/style.css
+++ b/css/style.css
@@ -1,4 +1,4 @@
-@import "reset.css";
+ @import "reset.css";
 @import url('https://fonts.googleapis.com/css?family=Fira+Code:400,700&display=swap&subset=cyrillic');
 
  :root {
@@ -148,14 +148,15 @@ nav {
 /*
 ЧАТ
 */
-
+.second div {
+  display: flex;
+}
 .communication {
   width: 480px;
   display: inline-block;
   border-right: 1px solid var(--light-grey);
-  position: absolute;
   top: 1px;
-  left: 968px;
+  left: 1192px;
   position: fixed;
 }
 .communication__body__mymessage__message {
@@ -181,6 +182,8 @@ nav {
 .communication__body__ava {
   width: 32px;
   height: 32px;
+  padding-top: 216px;
+  margin-right: 8px;
 }
 .communivation__body__hismessage ul {
   display: flex;
@@ -222,6 +225,9 @@ h2 {
   font-size: 12px;
   color: rgba(0, 0, 0, 0.5);
   margin-top: 1px;
+}
+.communivation__body__hismessage {
+  margin-top: 24px;
 }
 
 
@@ -316,8 +322,7 @@ aside {
   width: 320px;
   height: 300px;
   border-radius: 12px;
-  position: absolute;
-  left: 984px;
+  left: 1190px;
   top: 15px;
   position: fixed;
 }
